--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,23 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#logo{
+    font-size: 2em;
+    font-weight: 800;
+    color: #ffa500 ;
+}
+
+header{
+    background-image: url('../img/bg-hero.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left;
+    color: #ffffff;
+    padding: 6.25rem 3.125rem;
+    text-align: center;
+    align-items: center;
+    text-shadow: 1px 1px 1px #000000;
 }
